# bank-accounts

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
bank/: .env  celery.py  settings.py  urls.py
core/: views.py
templates/core/: base.html  footer.html  header.html  index.html
transactions/: forms.py  models.py  tasks.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
