[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["Samer Odeh <samerodeh220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
black = "^21.12b0"
Django = "^4.0"
asgiref = "^3.4.1"
django-cors-headers = "^3.10.1"
django-environ = "^0.8.1"
djangorestframework-simplejwt = "^5.0.0"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
PyJWT = "^2.3.0"
pytz = "^2021.3"
sqlparse = "^0.4.2"
whitenoise = "^5.3.0"
kombu = "5.2.2"
crontab = "^0.23.0"
task = "^0.2.5"
django-celery-beat = "2.0.0"
decorators = "^2.0.7"
celery = "5.0"
python-dateutil = "2.8.1"
redis = "3.5.3"
fire = "^0.4.0"
requests = "^2.26.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
